# SearchAndDoc_Bot

./: .gitignore  .pre-commit-config.yaml  COLLAB.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: verify_linting.yaml
background_tasks/: job.py  thread_worker.py
helpers/: commands.py  worker.py  worker_task.py
models/: channel.py
services/: message_processor.py  trigger_search.py
tests/views/discord_bot/: conftest.py  test_commands.py  test_message_processor.py
views/discord_bot/: bot.py  commands.py
